# viz-lib

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: sample_speed_dating.csv  speed_dating.py
src/szviz/: __init__.py  core.py
